# medium

./: Cargo.toml  README.md  justfile
apps/android/app/: build.gradle.kts
apps/apple/: project.yml
apps/apple/MediumApple.xcodeproj/: project.pbxproj
apps/medium-cli/: Cargo.toml
apps/medium-cli/src/: cli.rs  client_api.rs  install.rs  invite.rs  lib.rs  state.rs
apps/medium-cli/tests/: app.rs  init_control.rs  invite.rs  pinned_tls.rs  systemd.rs  wss_proxy.rs
crates/medium-android-netstack/src/: lib.rs
crates/medium-session/: Cargo.toml
crates/medium-session/src/: lib.rs
crates/overlay-protocol/src/: messages.rs
crates/overlay-protocol/tests/: messages.rs
crates/overlay-transport/src/: pinned_http.rs
migrations/: 0002_scope_node_services.sql
packaging/systemd/: medium-control-plane.service
scripts/: cache-env.sh  disk-usage.sh  install.sh  package.sh
services/control-plane/: Cargo.toml
services/control-plane/src/: app.rs  registry.rs  state.rs
services/control-plane/src/routes/: mod.rs  pairing.rs  sessions.rs  ssh.rs
services/control-plane/tests/: health.rs  pairing.rs  registry.rs  sessions.rs  ssh.rs
services/home-node/: Cargo.toml
services/home-node/src/: proxy.rs
services/home-node/tests/: proxy.rs
services/relay/src/: lib.rs
tests/e2e/: init_control_join.sh
tests/netlab/: Containerfile  README.md  containerignore  run.sh
