[workspace]
members = [
  "apps/medium-cli",
  "crates/overlay-protocol",
  "crates/overlay-crypto",
  "crates/overlay-transport",
  "crates/medium-netstack",
  "crates/medium-session",
  "crates/medium-android-netstack",
  "crates/client-core",
  "services/control-plane",
  "services/home-node",
  "services/relay",
  "tools/uniffi-bindgen",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.0.4"

[workspace.dependencies]
anyhow = "1"
android_logger = "0.14"
axum = { version = "0.8", features = ["macros", "ws"] }
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
hyper-util = { version = "0.1", features = ["server", "http1", "http2", "tokio", "service"] }
jni = "0.21"
libc = "0.2"
log = "0.4"
quinn = "0.11"
rcgen = { version = "0.14", features = ["x509-parser"] }
rustls = "0.23"
rustls-pemfile = "2"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smoltcp = "0.12"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "uuid", "chrono", "migrate", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uniffi = { version = "0.29", features = ["build"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
