[package]
name = "medium-session"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
overlay-protocol = { path = "../overlay-protocol" }
overlay-transport = { path = "../overlay-transport" }
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
url.workspace = true

[dev-dependencies]
overlay-crypto = { path = "../overlay-crypto" }
