[package]
name = "home-node"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
libc.workspace = true
overlay-crypto = { path = "../../crates/overlay-crypto" }
overlay-protocol = { path = "../../crates/overlay-protocol" }
overlay-transport = { path = "../../crates/overlay-transport" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
toml = "0.9"
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
relay = { path = "../relay" }
